# AgenticAI10June

./: .gitignore  DayWise_topics.md  README.md  expense_tracker.py  helloworld.py  main.py  pyproject.toml  repolink.md
Day_02/: code.ipynb
Day_03/: day03.ipynb  students.txt
Day_04/: code.ipynb
Day_05/: Day5_Complete_Guide_Generative_AI_and_LLM_APIs.md  Day5_code.ipynb
Day_06/: Day06_Main_Lecture.md
Day_07/: 01_Complete_Guide.md  02_For_the_Students.md  Day07_Assignment.md  Day_07_Assignment_Solution.ipynb  Day_07_Coding_Notebook.ipynb
Day_08/: 1_pydantic_why.py  2_field_validator.py  3_model_validator.py  4_computed_fields.py  5_nested_models.py  6_serialization.py  code.ipynb
